# faiss-1

./: .gitignore  CMakeLists.txt  Index.cpp  Index.h  IndexBinaryIVF.cpp  IndexFlat.cpp  IndexFlat.h  IndexInt8.cpp  IndexInt8.h  IndexInt8Flat.cpp  IndexInt8Flat.h
cmake/: Cuda.cmake
cmake/Modules/: FindMKL.cmake
gpu/: CMakeLists.txt  GpuIndexFlat.cu  GpuIndexFlat.h  GpuIndexInt8.cu  GpuIndexInt8.h  GpuIndexInt8Flat.cu  GpuIndexInt8Flat.h
gpu/impl/: Distance.cu  Distance.cuh  FlatIndex.cu  FlatIndex.cuh  GeneralDistance.cuh  I8FlatIndex.cu  I8FlatIndex.cuh  L2Norm.cuh  VectorResidual.cu  VectorResidual.cuh
gpu/utils/: BlockSelectInt.cu  BlockSelectKernel.cuh  CopyUtils.cuh  MatrixMult.cu  MatrixMult.cuh
gpu/utils/blockselect/: BlockSelectInt1.cu  BlockSelectInt1024.cu  BlockSelectInt128.cu  BlockSelectInt2048.cu  BlockSelectInt256.cu  BlockSelectInt32.cu  BlockSelectInt512.cu  BlockSelectInt64.cu
tutorial/cpp/: 4-GPU.cpp  6-GpuIn8.cpp  CMakeLists.txt
utils/: distances.cpp  distances.h  distances_simd.cpp
